refactor: 앱 경계 분리 및 core:stock 을 stock-batch 로 이동
stock-api 와 stock-realtime 의 조회 경로를 DTO 프로젝션으로 바꿔 분석 도메인
엔티티 의존을 없앴다. 두 앱이 core:stock 을 쓰지 않게 되어 core:stock 을
stock-batch 안으로 옮기고 모듈을 제거했다. 이제 세 앱은 서로도, core 도
참조하지 않는다.

읽기 측을 QueryDSL 이 아니라 JdbcTemplate 으로 간 이유는 Q클래스가 분석 도메인
엔티티에서 생성돼 의존이 끊기지 않기 때문이다.

- stock-api: 조회 9건을 SQL → DTO 투영으로 전환. MovingAverage 는 3쿼리 → 1쿼리,
  Ranking 은 종목별 틱 조회(N+1) → IN 1쿼리.
- 스냅샷·관심종목이 Stock 엔티티 대신 stockId 를 참조한다.
- stock-realtime: 레짐 판정을 앱 안으로 옮기고 조건부 UPDATE 로 바꿔, 실제로
  바뀐 행이 있을 때만 랭킹을 재전송한다. realtime 안에서만 소비되던
  StockStateChangedEvent 는 직접 호출로 대체하고 제거했다.
- 틱을 받기만 하고 저장하지 않아 랭킹 현재가가 항상 null 이던 것을 수정했다.
- 틱 종목 식별을 enum ordinal 에서 종목코드로 바꿨다. 900개짜리 enum 중간에
  종목이 하나만 추가돼도 그 뒤 모든 틱이 다른 종목이 된다.
- EPS quarter 는 YearMonth 매핑이 없어 자바 직렬화(VARBINARY)로 저장됐고 분기
  정렬이 바이트 순서였다. 분기 첫날 LocalDate 로 바꿨다.
- momentum/fip 은 @AttributeOverride 가 @Column 을 통째로 교체하며 precision 이
  빠져 NUMERIC(38,2) 로 잡혔다. FIP 0.996032 가 1.00 으로 뭉개져 백분위 계산에
  동점이 대량 발생했다. 컬럼 정의를 임베더블 자신에게 옮겼다.
- 각 앱은 자신이 접근하는 테이블만 테스트용 schema.sql 로 정의한다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>